--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bignumber.js": "^9.0.1",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
+    "moralis": "^0.0.134",
     "web3": "^1.6.0"
   },
   "devDependencies": {
